--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:frontend": "cd frontend && npm run dev",
     "build": "npm run build:backend && npm run build:frontend",
     "build:backend": "tsc",
-    "build:frontend": "cd frontend; npm run build",
+    "build:frontend": "cd frontend && npm run build",
     "start": "node dist/server.js",
     "verify-config": "ts-node scripts/verify-config.ts",
     "test-config": "ts-node scripts/test-config-flow.ts",
