--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           codespell \
             --skip="*.lock,*.json,*.map,*.yaml,*.yml,*.csv,*.bib,target,node_modules,.git,dist,venv,build,benchmarks" \
-            --ignore-words-list="crate,ser,deser"
+            --ignore-words-list="crate,ser,deser,erro,sucesso,msg,val,info,historico,usuario,autenticacao,conexao"
           # MONOREPO NOTE: Add multilingual stopwords to ignore-words-list if needed
           # Example: --ignore-words-list="crate,ser,deser,meu,oder,ist,alle" (Portuguese,German,etc)
 
