--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/multer": "^2.0.0",
     "@types/qrcode": "^1.5.6",
     "axios": "^1.6.2",
     "baileys": "^6.7.0",
@@ -56,6 +57,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
     "openai": "^4.20.1",
