--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/express-rate-limit": "^5.1.3",
     "@types/multer": "^2.0.0",
     "@types/qrcode": "^1.5.6",
     "axios": "^1.6.2",
     "baileys": "^6.7.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
@@ -49,7 +51,7 @@
     "groq-sdk": "^0.3.0",
     "helmet": "^8.1.0",
     "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.3",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
@@ -73,7 +75,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
