Feat: Update Landing Page with legal pages, branding and social links; Add Admin and Payment features

--- a/.env.example
+++ b/.env.example
@@ -50,5 +50,10 @@ X_API_SECRET=your-x-api-secret
 X_ACCESS_TOKEN=your-x-access-token
 X_ACCESS_SECRET=your-x-access-secret
 
+# Mercado Pago (for subscription billing)
+MP_ACCESS_TOKEN=APP_USR-your-access-token-here
+MP_PUBLIC_KEY=APP_USR-your-public-key-here
+MP_WEBHOOK_SECRET=your-webhook-secret-optional
+
 # Frontend (optional, for CORS)
 FRONTEND_URL=http://localhost:3001
