--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "helmet": "^8.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.3",
+    "mercadopago": "^2.11.0",
     "mongoose": "^8.0.3",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
