feat: trial fraud prevention + click tracking MVP
Backend:
- Add hasUsedTrial field to User model for trial tracking
- Implement single-source-of-truth trial validation in PaymentService
- Create Click model with optimized indexes for tracking
- Add /s/:code short URL redirect route with click tracking
- Implement proxy-safe IP extraction (Nginx/Cloudflare compatible)
- Add collision-safe shortCode generation with retry logic
- Create /api/stats/clicks endpoint for analytics
- Update Offer model with shortCode and clicks fields

Frontend:
- Add click analytics card to Analytics dashboard
- Display clicksToday metric with MousePointerClick icon
- Integrate /stats/clicks API call

Launch Readiness:
- Create comprehensive QUICKSTART.md guide
- Update .env.example with 60+ documented variables
- Enhance environment validation at startup
- Implement postsToday tracking in admin dashboard

BREAKING CHANGE: Replaces /s redirectRoutes with shorturlRoutes

Security: Trial fraud prevention prevents infinite trial abuse
Analytics: Real-time click tracking for affiliate link performance

--- a/.env.example
+++ b/.env.example
@@ -1,76 +1,183 @@
-# Environment Variables Configuration
+# ========================================
+# 🔴 CORE - OBRIGATÓRIO
+# ========================================
 
-# Server
+# Porta do servidor
 PORT=3000
 
-# MongoDB
+# URL de conexão do MongoDB
+# Local: mongodb://localhost:27017/voxelpromo
+# Atlas: mongodb+srv://user:pass@cluster.mongodb.net/voxelpromo
 MONGODB_URI=mongodb://localhost:27017/voxelpromo
 
-# Security
-JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long-change-this
-ALLOWED_ORIGINS=http://localhost:3001,https://yourdomain.com
+# Chave secreta para JWT (MÍNIMO 32 caracteres)
+# Gere uma forte: openssl rand -base64 32
+JWT_SECRET=sua-chave-secreta-minimo-32-caracteres-mude-isso-em-producao
 
-# AI Services (at least one required for content generation)
-GROQ_API_KEY=your-groq-api-key
-OPENAI_API_KEY=your-openai-api-key
+# URL do frontend (para CORS)
+FRONTEND_URL=http://localhost:3001
 
-# Telegram (optional)
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
-TELEGRAM_CHAT_ID=your-telegram-chat-id
+# Origens permitidas (separadas por vírgula)
+ALLOWED_ORIGINS=http://localhost:3001,http://localhost:3000
 
-# WhatsApp (optional)
+# ========================================
+# 🤖 INTELIGÊNCIA ARTIFICIAL (Escolha 1+)
+# ========================================
+
+# Groq - RECOMENDADO (Rápido + Gratuito)
+GROQ_API_KEY=
+
+# OpenAI - Melhor qualidade
+OPENAI_API_KEY=
+
+# DeepSeek - Custo-benefício
+DEEPSEEK_API_KEY=
+
+# Provedor padrão: groq | openai | deepseek
+AI_PROVIDER=groq
+
+# ========================================
+# 📱 CANAIS DE DISTRIBUIÇÃO (Opcional)
+# ========================================
+
+# --- Telegram ---
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+
+# --- WhatsApp ---
 WHATSAPP_ENABLED=false
-WHATSAPP_TARGET_NUMBER=5511999999999
 WHATSAPP_LIBRARY=baileys
+WHATSAPP_TARGET_NUMBER=5511999999999
 
-# AliExpress Affiliate API (optional)
-ALIEXPRESS_APP_KEY=your-aliexpress-app-key
-ALIEXPRESS_APP_SECRET=your-aliexpress-app-secret
-ALIEXPRESS_TRACKING_ID=your-tracking-id
-ALIEXPRESS_EXCHANGE_RATE=5.0
+# --- X (Twitter) ---
+# OAuth 1.0a (App + User Tokens)
+X_API_KEY=
+X_API_KEY_SECRET=
+X_ACCESS_TOKEN=
+X_ACCESS_TOKEN_SECRET=
 
-# Amazon Product API (optional)
-AMAZON_ACCESS_KEY=your-amazon-access-key
-AMAZON_SECRET_KEY=your-amazon-secret-key
-AMAZON_ASSOCIATE_TAG=your-associate-tag
+# OAuth 2.0 (Opcional - para features avançadas)
+X_OAUTH2_CLIENT_ID=
+X_OAUTH2_CLIENT_SECRET=
+X_OAUTH2_REDIRECT_URI=http://localhost:3000/api/x/callback
+X_OAUTH2_ACCESS_TOKEN=
+X_OAUTH2_REFRESH_TOKEN=
+
+# Bearer Token (alternativa simples)
+X_BEARER_TOKEN=
+
+# --- Instagram ---
+INSTAGRAM_APP_ID=
+INSTAGRAM_APP_SECRET=
+INSTAGRAM_ACCESS_TOKEN=
+INSTAGRAM_PAGE_ID=
+INSTAGRAM_IG_USER_ID=
+INSTAGRAM_WEBHOOK_VERIFY_TOKEN=
+
+# ========================================
+# 🛒 MARKETPLACES E AFILIADOS (Opcional)
+# ========================================
+
+# --- Amazon Product Advertising API ---
+AMAZON_ACCESS_KEY=
+AMAZON_SECRET_KEY=
+AMAZON_ASSOCIATE_TAG=
 AMAZON_REGION=us-east-1
 
-# Mercado Livre API (optional)
-MERCADOLIVRE_CLIENT_ID=your-mercadolivre-client-id
-MERCADOLIVRE_CLIENT_SECRET=your-mercadolivre-client-secret
+# --- AliExpress Affiliate API ---
+ALIEXPRESS_APP_KEY=
+ALIEXPRESS_APP_SECRET=
+ALIEXPRESS_TRACKING_ID=
+ALIEXPRESS_EXCHANGE_RATE=5.0
+
+# --- Mercado Livre ---
+MERCADOLIVRE_CLIENT_ID=
+MERCADOLIVRE_CLIENT_SECRET=
 MERCADOLIVRE_REDIRECT_URI=http://localhost:3000/api/mercadolivre/callback
-MERCADOLIVRE_AFFILIATE_CODE=your-affiliate-code-or-url
-MERCADOLIVRE_AFFILIATE_COOKIES=[] # JSON string of cookies or path to cookies.json
+MERCADOLIVRE_AFFILIATE_CODE=
+MERCADOLIVRE_AFFILIATE_COOKIES=[]
 MERCADOLIVRE_LINK_GENERATOR_ENDPOINT=https://www.mercadolivre.com.br/afiliados/linkbuilder/generate
-PROXY_URL=http://user:pass@host:port # Optional: For running on non-BR servers
 
-# X/Twitter API (optional)
-X_API_KEY=your-x-api-key
-X_API_SECRET=your-x-api-secret
-X_ACCESS_TOKEN=your-x-access-token
-X_ACCESS_SECRET=your-x-access-secret
+# --- Shopee ---
+SHOPEE_FEED_URLS=
+SHOPEE_AFFILIATE_CODE=
 
-# Mercado Pago (for subscription billing)
-MP_ACCESS_TOKEN=APP_USR-your-access-token-here
-MP_PUBLIC_KEY=APP_USR-your-public-key-here
-MP_WEBHOOK_SECRET=your-webhook-secret-optional
+# --- Rakuten ---
+RAKUTEN_ENABLED=false
+RAKUTEN_CLIENT_ID=
+RAKUTEN_CLIENT_SECRET=
+RAKUTEN_SID=
 
-# Email Service
-# Option 1: SMTP (Titan/HostGator - RECOMMENDED)
+# --- Awin ---
+AWIN_ENABLED=false
+AWIN_FEED_URL=
+
+# --- Lomadee ---
+LOMADEE_ENABLED=false
+LOMADEE_APP_TOKEN=
+LOMADEE_SOURCE_ID=
+
+# --- Afilio ---
+AFILIO_ENABLED=false
+AFILIO_FEED_URL=
+
+# ========================================
+# 💳 PAGAMENTOS (Mercado Pago)
+# ========================================
+
+MP_ACCESS_TOKEN=
+MP_PUBLIC_KEY=
+MP_WEBHOOK_SECRET=
+
+# ========================================
+# 📧 EMAIL (Escolha 1)
+# ========================================
+
+# Opção 1: SMTP (Titan/HostGator - RECOMENDADO)
 EMAIL_HOST=smtp.titan.email
 EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=contato@voxelpromo.com
-EMAIL_PASS=your_titan_email_password
+EMAIL_PASS=
 EMAIL_FROM=VoxelPromo <contato@voxelpromo.com>
 
-# Option 2: Resend API (fallback)
-RESEND_API_KEY=re_your_api_key_here
+# Opção 2: Resend API (Fallback)
+RESEND_API_KEY=
 
-# Sentry (Error Tracking & Performance Monitoring)
-SENTRY_DSN=https://your-sentry-dsn@o123456.ingest.sentry.io/123456
+# ========================================
+# 🔍 OBSERVABILIDADE (Opcional)
+# ========================================
+
+# Sentry - Error Tracking & Performance
+SENTRY_DSN=
 SENTRY_ENVIRONMENT=production
 SENTRY_TRACES_SAMPLE_RATE=0.1
+SENTRY_DEV_MODE=false
 
-# Frontend (optional, for CORS)
-FRONTEND_URL=http://localhost:3001
+# Vectorizer - RAG/Embedding Service
+VECTORIZER_URL=http://127.0.0.1:15002
+VECTORIZER_API_KEY=
+
+# ========================================
+# 🌐 DEPLOY (Produção)
+# ========================================
+
+# Ambiente: development | staging | production
+NODE_ENV=development
+
+# URL base para encurtador de links
+BASE_URL=http://localhost:3000
+SHORT_URL_BASE=http://localhost:3000
+
+# Proxy (para servidores fora do Brasil)
+PROXY_URL=
+
+# ========================================
+# 🧪 DESENVOLVIMENTO (Opcional)
+# ========================================
+
+# Desabilitar logs verbose
+ENABLE_VERBOSE_LOGS=false
+
+# Desabilitar scheduler (jobs automáticos)
+DISABLE_SCHEDULER=false
