chore: add frontend .env.example for production deployment
- Created frontend/.env.example with VITE_API_URL and VITE_MP_PUBLIC_KEY
- Added .env files to frontend .gitignore for security

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,35 @@
-# Frontend Environment Variables
+# VoxelPromo Frontend - Environment Variables
+# Copy this file to .env and fill in the values before building
 
-# Backend API URL
+# ===========================================
+# API Configuration (REQUIRED)
+# ===========================================
+
+# Backend API URL (use localhost for dev, production URL for prod)
+# Development: http://localhost:3000/api
+# Production:  https://voxelpromo.com/api
 VITE_API_URL=http://localhost:3000/api
 
-# Mercado Pago Public Key (for Transparent Checkout)
-# Get this from your Mercado Pago dashboard: https://www.mercadopago.com.br/developers/panel/credentials
-VITE_MP_PUBLIC_KEY=APP_USR-your-public-key-here
+# ===========================================
+# Mercado Pago (REQUIRED for payments)
+# ===========================================
+
+# Public Key from Mercado Pago Dashboard
+# Get it at: https://www.mercadopago.com.br/developers/panel/app
+VITE_MP_PUBLIC_KEY=APP_USR-xxxx
+
+# ===========================================
+# IMPORTANT NOTES
+# ===========================================
+# 
+# 1. VITE_* variables are injected at BUILD TIME, not runtime
+#    After changing these values, you MUST rebuild:
+#    npm run build:frontend
+#
+# 2. For production deployment:
+#    - Copy this file to .env
+#    - Set VITE_API_URL to your production API URL
+#    - Set VITE_MP_PUBLIC_KEY to your production Mercado Pago key
+#    - Run: npm run build:frontend
+#
+# 3. Never commit .env file with real credentials!
