--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,14 @@ FRONTEND_URL=http://localhost:3001
 ALLOWED_ORIGINS=http://localhost:3001,http://localhost:3000
 
 # ========================================
+# 🔐 GOOGLE OAUTH (Opcional)
+# ========================================
+
+# Client ID do Google Cloud Console
+# Crie em: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+
+# ========================================
 # 🤖 INTELIGÊNCIA ARTIFICIAL (Escolha 1+)
 # ========================================
 
