feat(ux): checkout layout, pricing, navigation, storytelling tone
- Checkout: reduce header spacing (mb-8 → mb-4), update pricing to R$ 79,90
- Pricing: add 'Voltar' button, make logo clickable to home, update pricing
- Templates: add 'storytelling' tone with narrative template
- Navigation: improve back button and home link functionality

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "format:check": "prettier --check \"src/**/*.ts\"",
     "quality": "npm run type-check && npm run lint && npm run format:check && npm run test:coverage",
     "init": "node scripts/check-env.js",
-    "create-admin": "node scripts/create-admin.js"
+    "create-admin": "node scripts/create-admin.js",
+    "postinstall": "cd frontend && npm install"
   },
   "keywords": [
     "offers",
