feat: Instagram Manual Token Support & Shopee API Integration
- Added Manual Access Token input in Instagram UI

- Updated InstagramService to use Facebook Graph API

- Implemented automatic Business Account resolution

- Added HelpTip with instructions for token generation

- Shopee: Added multi-tenant API support and Rate Limiting

--- a/.env.example
+++ b/.env.example
@@ -110,6 +110,12 @@ MERCADOLIVRE_LINK_GENERATOR_ENDPOINT=https://www.mercadolivre.com.br/afiliados/l
 SHOPEE_FEED_URLS=
 SHOPEE_AFFILIATE_CODE=
 
+# Shopee Affiliate Open API (GraphQL)
+# Obtenha credenciais em: https://open-api.affiliate.shopee.com.br/
+SHOPEE_APP_ID=
+SHOPEE_APP_SECRET=
+SHOPEE_API_ENABLED=true
+
 # --- Rakuten ---
 RAKUTEN_ENABLED=false
 RAKUTEN_CLIENT_ID=
