--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voxelpromo",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Sistema de monitoramento de ofertas com automação e IA",
   "main": "dist/server.js",
   "scripts": {
@@ -73,6 +73,7 @@
     "qrcode-terminal": "^0.12.0",
     "resend": "^6.6.0",
     "rss-parser": "^3.13.0",
+    "stripe": "^20.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twitter-api-v2": "^1.15.1",
