--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "qrcode-terminal": "^0.12.0",
     "resend": "^6.6.0",
     "rss-parser": "^3.13.0",
+    "sharp": "^0.34.5",
     "stripe": "^20.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
